--- a/SailingStory/index.html
+++ b/SailingStory/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sailing Story</title>
+    <title>Dr.Sailing</title>
   </head>
   <body>
     <div id="root"></div>
